# theme-switcher

./: CLAUDE.md  Cargo.toml  NEOVIM.md  README.md  install.sh  test_ipc.sh
examples/: advanced-config.toml  claude_code_theme.lua  claude_code_theme.sh  dark_theme.sh  light_theme.sh  minimal-config.toml  nvim-config.lua  terminal_theme.lua  theme-switcher.toml  theme_change.lua  vscode_theme.lua  zellij_theme.lua
lua/theme-switcher/: early-init.lua  init.lua
nvim-theme-switcher/: README.md
plugin/: theme-switcher.lua
src/: app.rs  async_runtime.rs  cli.rs  config.rs  config_file.rs  error.rs  handlers.rs  ipc.rs  lib.rs  lua_handler.rs
src/platform/: macos.rs  mod.rs
